--- a/arangohack.ipynb
+++ b/arangohack.ipynb
@@ -1364,7 +1364,7 @@
         "import langchain\n",
         "from langchain_google_genai import ChatGoogleGenerativeAI\n",
         "\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCHphV9YvzBEQX7MRkf48Yjyuv4kFo0hcA\"\n",
+        "os.environ[\"GOOGLE_API_KEY\"] = \"YOUR-API-KEY\"\n",
         "llm = ChatGoogleGenerativeAI(model= \"gemini-1.5-pro\", temperature=0)\n",
         "\n",
         "response = llm.predict(\"What is the capital of France?\")\n",
